[tool.poetry]
name = "project-ripple"
version = "0.1.0"
description = "A totally \"lightweight\" 4-key rhythm song player for Quaver files"
authors = ["Your Name <you@example.com>"]
license = "GPLv3-only"
readme = "README.md"
packages = [{include = "project_ripple"}]

[tool.poetry.scripts]
project-ripple = "project_ripple.Main:__main__"
ripple = "project_ripple.Main:__main__"

[tool.poetry.dependencies]
python = "3.11.*"
pygame = "2.2.0"
Pillow = "^10.3.0"
numpy = "^1.24.2"
platformdirs = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
